--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "管理員控制中心";
 }
-<div style="background-image: url('/adminimg/wood.jpg');">
+<div style="background-image: url('/adminimg/wood.jpg'); padding-top: 10px;">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin:0 23%;">
         <ol class="carousel-indicators" style="margin-bottom:0;">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
