--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "管理員控制中心";
 }
-<div style="background-image: url('/adminimg/wood.jpg'); padding-top: 20px;">
+<div style="background-image: url('/adminimg/wood.jpg'); padding-top: 20px; background-repeat: no-repeat; background-size: cover;">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin:0 23%;">
         <ol class="carousel-indicators" style="margin-bottom:0;">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div style="display: flex; flex-direction: column; align-items: center;background-image: url('/adminimg/wood.jpg');">
+<div style="display: flex; flex-direction: column; align-items: center;background-image: url('/adminimg/wood.jpg'); background-repeat: no-repeat; background-size: cover;">
     <hr>
     <dl style="width:100%;">
         <dd style="margin:0 23%; background-color:#fffaf0; letter-spacing: 5px; line-height: 2; display: flex; justify-content: center; align-items: center; font-size:24px; padding:0 3%;">
