--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "管理員控制中心";
 }
-<div style="background-image: url('/adminimg/wood.jpg'); padding-top: 20px; background-repeat: no-repeat; background-size: cover;">
+<div style="padding-top: 20px;">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin:0 23%;">
         <ol class="carousel-indicators" style="margin-bottom:0;">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -31,15 +31,17 @@
             <span class="sr-only">Next</span>
         </button>
     </div>
-</div>
-
-<div style="display: flex; flex-direction: column; align-items: center;background-image: url('/adminimg/wood.jpg'); background-repeat: no-repeat; background-size: cover;">
-    <hr>
     <dl style="width:100%;">
-        <dd style="margin:0 23%; background-color:#fffaf0; letter-spacing: 5px; line-height: 2; display: flex; justify-content: center; align-items: center; font-size:24px; padding:0 3%;">
+        <dd style="margin:0 23%; background-color:#fffaf0; letter-spacing: 5px; line-height: 2; display: flex; justify-content: center; align-items: center; font-size:24px; padding:0 3%; border: 1px solid orange; border-radius: 15px;">
             @Html.DisplayFor(t => t.TextValue)
         </dd>
     </dl>
 </div>
-
+<style>
+    main {
+        background-image: url('/adminimg/wood.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
 
