--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -18,7 +18,10 @@
         <input type="hidden" id="CreateBy" class="form-control" value="@Model.CreateBy" readonly />
         @if (User.Identity.IsAuthenticated)
         {
-            <input type="hidden" id="MeId" class="form-control" value="@User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value" readonly />
+            @if (User.IsInRole("User"))
+            {
+                <input type="hidden" id="MeId" class="form-control" value="@User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value" readonly />
+            }
         }
         <br />
         @if (Model.Trade.Contains("買賣"))
@@ -27,7 +30,7 @@
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop" onclick="checklogin()" >
                 購買
             </button>
-            @if (User.Identity.IsAuthenticated)
+            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
             {
                 @if(User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value != Model.CreateBy)
                 {
@@ -60,7 +63,7 @@
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2" onclick="checklogin()">
                 交換
             </button>
-            @if (User.Identity.IsAuthenticated)
+            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
             {
                 @if (User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value != Model.CreateBy)
                 {
