--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -85,7 +85,9 @@
     }
     else
     {
-        <h2 class="text-center my-5">沒有訂單在列表中</h2>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <h2 class="my-5">沒有訂單在列表中</h2>
+        </div>
     }
     <partial name="_NowPageMySalesPartial" />
 </div>
