--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -59,7 +59,9 @@
     }
     else
     {
-        <h2 class="text-center my-5">願望清單是空的</h2>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <h2 class="my-5">願望清單是空的</h2>
+        </div>
     }
     <partial name="_NowPageWishsPartial" />
 </div>
