--- a/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
@@ -38,7 +38,9 @@
     }
     else
     {
-        <h2 class="text-center my-5">購物車是空的</h2>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <h2 class="my-5">購物車是空的</h2>
+        </div>
     }
 </div>
 @section topCSS{
