--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
@@ -37,6 +37,10 @@
                 </div>
             }
         }
+        else
+        {
+            <h2 class="text-center my-5 w-100">沒有符合的商品</h2>
+        }
     </div>
 </div>
    
