--- a/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
@@ -9,13 +9,19 @@
 }
 <div class="container-fluid pb-5 gap-10px">
     <h1>我的資訊</h1>
-    <table class="container-fluid">
-        <tr><td>@Html.DisplayNameFor(model => model.Id)</td><td>@Html.DisplayFor(model => model.Id)</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Name)</td><td>@Html.DisplayFor(model => model.Name)</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Nickname)</td><td>@Html.DisplayFor(model => model.Nickname)</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Email)</td><td>@Html.DisplayFor(model => model.Email)</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.PhoneNo)</td><td>@Html.DisplayFor(model => model.PhoneNo)</td></tr>
-    </table>
+    <h3 class="text-primary">@TempData["Message"]</h3>
+    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+        <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black; overflow: hidden;">
+            <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="this.src='/DeafultPictures/EmptyUserIcon.png'">
+        </div>
+        <div class="container-fluid">
+            <h2>@Html.DisplayNameFor(model => model.Id)</h2><p>@Html.DisplayFor(model => model.Id)</p>
+            <h2>@Html.DisplayNameFor(model => model.Name)</h2><p>@Html.DisplayFor(model => model.Name)</p>
+            <h2>@Html.DisplayNameFor(model => model.Nickname)</h2><p>@Html.DisplayFor(model => model.Nickname)</p>
+            <h3>@Html.DisplayNameFor(model => model.Email)</h3><p>@Html.DisplayFor(model => model.Email)</p>
+            <h3>@Html.DisplayNameFor(model => model.PhoneNo)</h3><p>@Html.DisplayFor(model => model.PhoneNo)</p>
+        </div>
+    </div>
     <p>你所屬群組是</p>
     <ul>
         @foreach (var roleClaim in User.Claims.Where(c => c.Type == ClaimTypes.Role))
