--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -40,7 +40,7 @@
         }
         else
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px w-100">
                 <h2 class="my-5">沒有上架的商品</h2>
             </div>
         }
