--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
@@ -39,7 +39,7 @@
         }
         else
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px w-100">
                 <h2 class="my-5">沒有符合的商品</h2>
             </div>
         }
