--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "管理員控制中心";
 }
-<div style="padding-top: 20px;">
+<div style="padding-top: 20px;" class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators" style="margin-bottom:0;">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
