--- a/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Details.cshtml
@@ -32,4 +32,5 @@
 </div>
 @section topCSS{
     <link href="~/css/account/details.css" rel="stylesheet" />
+    <link href="~/css/account/changeuserinfo.css" asp-append-version="true" rel="stylesheet" />
 }
