--- a/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/ProductImage.cshtml
@@ -31,7 +31,7 @@
                     <input type="file" asp-for="File1" class="d-none" accept="image/*" id="file1" />
                     <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
-                <span asp-validation-for="File1" class="text-danger"></span>
+                <span asp-validation-for="File1" class="text-danger" id="fileMessage"></span>
             </td>
         </tr>
         <tr>
