--- a/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Create.cshtml
@@ -24,9 +24,11 @@
 </div>
 @section topCSS{
     <link href="~/css/seller/edittablepartial.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 }
 
 @section endJS{
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
     <script src="~/js/seller/createtablepartial.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 }
